--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    supportLibraryVersion = '27.1.1'
+    firebaseVersion = '11.8.0'
+    retrofitVersion = '2.2.0'
+    volleyVersion = '1.0.0'
+}
