--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofitVersion"
 
+    implementation 'com.itextpdf:itextg:5.5.10'
 
     implementation "com.android.volley:volley:$rootProject.ext.volleyVersion"
     implementation "com.github.f0ris.sweetalert:library:1.5.1"
