--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,14 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
+            android:name=".Menu.PreciosRutaConductor"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
             android:name=".Menu.SelectSillas"
             android:screenOrientation="portrait" />
 
