Mejora en sincronización remota
Se ha mejorado el envío de datos usando sincronización remota. Ahora se han creado servicios separados para el manejo de la remota y la local. Se usa una nueva forma de verificar los tickets sincronizados, aunque hay un pequeño problema que se duplica un Ticket al momento de cerrarse la conexión inesperadamente. Se valida que no se ejecute el hilo más de una vez verificando el estado de la sincronización.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,15 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:icon">
 
-        <!-- SERVICIO DE SINCRONIZACION -->
+        <!-- SERVICIO DE SINCRONIZACION LOCAL-->
         <service
-            android:name=".sync.SyncService"
-            android:exported="false" ></service>
+            android:name=".sync.SyncServiceLocal"
+            android:exported="false" />
+
+        <!-- SERVICIO DE SINCRONIZACION REMOTA-->
+        <service
+            android:name=".sync.SyncServiceRemote"
+            android:exported="false" />
 
         <!-- Sugar Atribbutes -->
         <meta-data
@@ -76,9 +81,6 @@
             android:name=".Menu.SelectSillas"
             android:screenOrientation="portrait" />
 
-        <service
-            android:name=".sync.SyncService"
-            android:exported="false"></service>
     </application>
 
 </manifest>
