Add Changes Ruben Update
Se agregan los cambios que ha realizado ruben

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.smartgeeks.busticket"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 6
-        versionName "1.0.5"
+        versionCode 7
+        versionName "1.0.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -41,6 +41,8 @@ dependencies {
 
     implementation "com.android.volley:volley:$rootProject.ext.volleyVersion"
     implementation "com.github.f0ris.sweetalert:library:1.5.1"
+
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
     // Sqlite - Sugar ORM
     implementation 'com.github.satyan:sugar:1.5'
