Send Logs from login on App
The functionality that allow registering the session logs in the app is carried out

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:icon">
 
-        <activity android:name=".Menu.SelectTarifa"
+        <activity
+            android:name=".Menu.SelectTarifa"
             android:screenOrientation="portrait" />
 
         <!-- SERVICIO DE SINCRONIZACION LOCAL -->
@@ -45,8 +46,8 @@
 
         <activity
             android:name=".SplashScreen"
-            android:screenOrientation="portrait"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
