--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,7 @@ dependencies {
 
     // Easy Permissions - For developers using AndroidX in their applications
     implementation 'pub.devrel:easypermissions:3.0.0'
+
+    // Android Library for ESC/POS Thermal printer
+    implementation 'com.github.DantSu:ESCPOS-ThermalPrinter-Android:3.0.1'
 }
