--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,15 @@ dependencies {
 
     // Android Library for ESC/POS Thermal printer
     implementation 'com.github.DantSu:ESCPOS-ThermalPrinter-Android:3.0.1'
+
+    // Room
+    def roomVersion = "2.4.1"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$roomVersion"
+
+
 }
