--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         tools:replace="android:icon">
 
         <activity
-            android:name=".Menu.SelectTarifa"
+            android:name=".menu.SelectTarifa"
             android:screenOrientation="portrait" />
 
         <!-- SERVICIO DE SINCRONIZACION LOCAL -->
@@ -67,7 +67,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".Menu.SelectRutas"
+            android:name=".menu.SelectRutas"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait">
             <meta-data
@@ -75,7 +75,7 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
-            android:name=".Menu.PreciosRutaConductor"
+            android:name=".menu.PreciosRutaConductor"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait">
             <meta-data
@@ -83,7 +83,7 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
-            android:name=".Menu.SelectSillas"
+            android:name=".menu.SelectSillas"
             android:screenOrientation="portrait" />
     </application>
 
